# pydoppler

./: .gitignore  README.md  __init__.py  pyproject.toml
pydoppler/: __init__.py  mynormalize.py  pydoppler.py
pydoppler/fortran_code/: makefile
pydoppler/test_data/: sample_script.py  sample_script_copy.py
tests/: test_continuum.py  test_dopin_headless.py  test_error_bars.py  test_import.py  test_resources.py  test_workdir.py
