[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydoppler"
version = "0.3.0"
description = "A Python wrapper for Henk Spruit's doppler tomography software"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Juan V. Hernandez Santisteban", email = "jvhs1@st-andrews.ac.uk"}
]
maintainers = [
  {name = "PyDoppler maintainers", email = "jvhs1@st-andrews.ac.uk"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["doppler", "tomography", "astronomy", "spectroscopy"]
dependencies = [
  "numpy>=1.20",
  "matplotlib>=3.3",
  "importlib-resources>=5.0; python_version < '3.9'",
]

[project.optional-dependencies]
examples = ["astropy>=5.0"]
test = ["pytest>=7"]
lint = ["ruff>=0.6"]
dev = ["build>=1.0", "pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/alymantara/pydoppler"
"Source Code" = "https://github.com/alymantara/pydoppler"
"Issue Tracker" = "https://github.com/alymantara/pydoppler/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydoppler*"]

[tool.setuptools.package-data]
pydoppler = [
  "fortran_code/*",
  "fortran_code/**/*",
  "test_data/*",
  "test_data/**/*",
]

[tool.setuptools.exclude-package-data]
pydoppler = ["**/__pycache__/*", "**/*.py[cod]"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py38"
line-length = 88
extend-exclude = ["pydoppler/pydoppler.py", "pydoppler/test_data"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
